--- a/src/WebApps/WebSPA/src/index.css
+++ b/src/WebApps/WebSPA/src/index.css
@@ -12,3 +12,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.overlay {
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
+  align-items: "center";
+}
+
+.snake-game-container {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  display: inline-block;
+}
+
+.centered-button {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.overlay-title {
+  padding-top: 100px;
+}
