--- a/src/WebApps/WebSPA/src/App.css
+++ b/src/WebApps/WebSPA/src/App.css
@@ -30,3 +30,12 @@
     transform: rotate(360deg);
   }
 }
+
+.loader {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
